discussion/kv_engine/183250/183250_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54516: Modify a replica collection over DCP (in-memory only)

Commit enables DCP to produce a collection modify system event
over DCP - for in-memory streaming only. With this commit a
history change made to the active collection will generate an
event which DCP will transmit to clients that have opted-into
flatbuffers_system_events

There is no support for flushing a modify (so no backfill test)

Change-Id: I7ac0955c6242df63ee23c63c3d2ae34eec8a1d4d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-11-29 09:32:42.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-11-29 09:33:11.000000000
Message: 
Patch Set 6: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/326872/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-29 09:59:48.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/617/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/passive_stream.cc:1038:31: error: no member named "getEventView" in "SystemEventConsumerMessage"; did you mean "getEventData"? [clang-diagnostic-error]
                        event.getEventView());
                              ^~~~~~~~~~~~
                              getEventData
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/response.h:887:22: note: "getEventData" declared here
    std::string_view getEventData() const override {
                     ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/617/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/passive_stream.cc:1038:31:
error: no member named "getEventView" in "SystemEventConsumerMessage"; did you mean "getEventData"? [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/617/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/593/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/dcp/passive_stream.cc:1038:31:
error: no member named "getEventView" in "SystemEventConsumerMessage"; did you mean "getEventData"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/593/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/779/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/dcp/passive_stream.cc(1038): error C2039: "getEventView": is not a member of "SystemEventConsumerMessage" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/779/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/639/ : FAILURE

Compile error at [2022-11-29T09:56:20.330Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_neo/kv_engine/engines/ep/src/dcp/passive_stream.cc:1038:31:
error: ?const class SystemEventConsumerMessage? has no member named ?getEventView?; did you mean ?getEventData??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/639/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/626/ : FAILURE

Compile error at [2022-11-29T09:58:39.944Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/engines/ep/src/dcp/passive_stream.cc:1038:31:
error: no member named "getEventView" in "SystemEventConsumerMessage"; did you mean "getEventData"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/626/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/617/ : FAILURE

Compile error at [2022-11-29T09:55:01.117Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/dcp/passive_stream.cc:1038:31:
error: ?const class SystemEventConsumerMessage? has no member named ?getEventView?; did you mean ?getEventData??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/617/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/876/ : FAILURE

Compile error at [2022-11-29T09:41:02.119Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/src/dcp/passive_stream.cc:1038:31:
error: no member named "getEventView" in "SystemEventConsumerMessage"; did you mean "getEventData"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/876/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/627/ : FAILURE

Compile error at [2022-11-29T09:40:26.617Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/dcp/passive_stream.cc:1038:31:
error: ?const class SystemEventConsumerMessage? has no member named ?getEventView?; did you mean ?getEventData??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/627/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/609/ : FAILURE

Compile error at [2022-11-29T09:45:00.511Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/dcp/passive_stream.cc:1038:31:
error: no member named "getEventView" in "SystemEventConsumerMessage"; did you mean "getEventData"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/609/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/636/ : FAILURE

Compile error at [2022-11-29T09:47:29.573Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/dcp/passive_stream.cc:1038:31:
error: no member named "getEventView" in "SystemEventConsumerMessage"; did you mean "getEventData"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/636/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21517/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
